# iot-edge-anomaly-detector

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
iot_edge_anomaly_detector/: __init__.py  edge.py
tests/: test_edge.py
