[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-edge-anomaly-detector"
version = "0.1.0"
description = "An IoT/edge device anomaly detection utility."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Aaron Rusz"}]
license = {text = "GPL-3.0-or-later"}
keywords = ["iot", "edge", "anomaly", "network", "monitor"]
